--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         </header>
         <section class="item hero"> 
             <div>
-                <p>presentación p1 </p>
-                <p>presentacion p2</p>
+                <p class="promocion">presentación p1 </p>
+                <p class="promocion">presentacion p2</p>
                 <form action="/index.html/">
                     <input type="text" placeholder="¿A dónde vas?">
+                    <button class="search-button" type="button"><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </section>
